commit desde VS CODE 2

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -7,7 +7,7 @@
     <title>hello platzi</title>
 </head>
 <body>
-    <h1>Sitio web</h1>
+    <h1>Sitio web profesional</h1>
     <p>Saludos gente</p>
     <p>esta complicado jeje</p>
 </body>
